--- a/src/main/resources/templates/history.html
+++ b/src/main/resources/templates/history.html
@@ -47,6 +47,19 @@
       <tr>
         <td colspan="5">Назначить на должность</td>
       </tr>
+      <tr>
+        <td colspan="4">
+          <form id="assign" action="#" th:action="@{/positions/history}" method="post">
+            <input style="display: none;" name="mode" type="text" value="ASSIGN">
+            <div th:replace="general :: mapDropdown('newPosition', 'Новая должность',
+              ${openPositions}, 'newPosition')"></div>
+          </form>
+        </td>
+        <td>
+          <input class="button1 danger" type="submit" value="Назначить" form="assign"
+                 onclick="return confirm('Назначить на должность? (Уволит с текущей занимаемой должности)')"/>
+        </td>
+      </tr>
       </tbody>
     </table>
   </div>
